5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions (1)/1575_1559.log
== TEST (2019-03-12 19:18:09) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print(.upper(frase))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:18:56) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print('.upper(frase)')
-- OUTPUT:
.upper(frase)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:19:29) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:19:40) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print("frase .upper()")
-- OUTPUT:
frase .upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:19:51) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print("frase".upper())
-- OUTPUT:
FRASE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:20:05) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print(frase .upper())
-- OUTPUT:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:20:11) 
-- CODE:
frase = "Ada Lovelance foi a primeira programadora da historia"
print(frase .upper())
-- EXECUTION TIME:
0.169368
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELANCE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:20:25) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:20:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase .upper())
-- EXECUTION TIME:
0.212552
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:20:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:20:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:21:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase .upper())
-- EXECUTION TIME:
0.153552
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
